# Vulnix

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway-worker.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  001_add_f01_columns.py  002_add_f03_columns.py  003_add_f06_tables.py  004_add_f07_indexes.py  004_add_f08_tables.py  005_add_f09_platform_columns.py  006_add_f10_tables.py  007_add_f11_tables.py
backend/src/: __init__.py  config.py  i18n.py  main.py
backend/src/api/: deps.py
backend/src/middleware/: __init__.py  logging_middleware.py  rate_limit.py
backend/src/models/: __init__.py  api_key.py  base.py  false_positive.py  notification.py  patch_pr.py  report_config.py  report_history.py  repository.py  scan_job.py  team.py  user.py  vulnerability.py
backend/src/rules/: README.md
backend/src/schemas/: api_key.py  auth.py  common.py  dashboard.py  false_positive.py  ide.py  notification.py  patch.py  report.py  repository.py  scan.py  vulnerability.py
backend/src/services/: api_key_service.py  auth_service.py  bitbucket_service.py  email_service.py  fp_filter_service.py  git_platform_service.py  github_app.py  github_platform_service.py  gitlab_service.py  ide_analyzer.py  llm_agent.py  notification_formatter.py  notification_service.py  (+10 more)
backend/tests/: __init__.py  conftest.py  test_debug_vuln.py  test_multilang_engine.py  test_repos.py  test_scan_orchestrator.py  test_webhooks.py
(+265 files in other folders)
